modify profile.exp, edu
